test/semantic_error/se_expr_arr.c0
int f() {
int a[2];
int b;
b = a+2;
}
